[package]
name = "test"
version = "0.1.0"
authors = ["brennanharris"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = { version = "0.2.7" }
esp-idf-hal = { version = "0.41.2" }
hal = { package = "esp32-hal", version = "0.12.0" }
esp-backtrace = { version = "0.7.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32"] }
pwm-pca9685 = { version = "0.3.1" }
